--- a/www/lib/stylesheet.css
+++ b/www/lib/stylesheet.css
@@ -29,6 +29,14 @@
 	border-bottom-right-radius: 0px;
 	margin-top: 5px;
 }
+#geocoder {
+	position: relative;
+	left: 20px;
+	top: -180px;
+	z-index: 400;
+	font-size: small;
+}
+
 .nogoitem {
 	margin: 10px;
 	border: 1px solid darkgrey;
