--- a/www/lib/stylesheet.css
+++ b/www/lib/stylesheet.css
@@ -18,7 +18,7 @@
     border-bottom-left-radius: 5px;
     border: 1px solid black;
     border-right: 0px;
-    display: none;
+    display: block;
     height: 550px;
     overflow: scroll;
 }
@@ -35,16 +35,19 @@
 
 #geocoder {
     position: relative;
-    left: 20px;
-    top: -180px;
+    left: 18px;
+    top: -595px;
+    width: 300px;
+    padding: 3px;
     z-index: 400;
     font-size: small;
 }
 
 #geocButton {
     position: relative;
-    left: 16px;
-    top: -180px;
+    left: 15px;
+    top: -595px;
+    padding: 3px;
     z-index: 400;
     font-size: small;
 }
@@ -116,4 +119,22 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+.fileContainer {
+    overflow: hidden;
+    position: relative;
+}
+
+.fileContainer [type=file] {
+    cursor: inherit;
+    display: block;
+    font-size: 999px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
 }
